@@ -14,7 +14,6 @@ SPVM::Builder::Util::getopt
   'B|build-dir=s'   => \my $build_dir,
   'I|module-dir=s' => \my @module_dirs,
   'q|quiet'   => \my $quiet,
-  'O|optimize=s' => \my $optimize,
   'f|force' => \my $force,
   'c|config=s' => \my $config_file,
   'dynamic-lib' => \my $dynamic_lib,
@@ -44,7 +43,6 @@ else {
     output_file => $output_file,
     class_name => $class_name,
     quiet => $quiet,
-    optimize => $optimize,
     force => $force,
     config_file => $config_file,
     dynamic_lib => $dynamic_lib,
