@@ -15,6 +15,8 @@ Revision history for SPVM
           
           [After]
           static method rand : double ($seed : int*)
+        [NON BACKWORD COMPATIBLE CHANGES]
+        * Remove -O|--optimize option from spvmcc
           
 0.9512  2021-04-21
         [CHANGE]
